# data_structures_and_algorithms

./: .gitignore  CMakeLists.txt  README.md
course_1_algorithmic_toolbox/: CMakeLists.txt
course_1_algorithmic_toolbox/week1_programming_challenges/: CMakeLists.txt
course_1_algorithmic_toolbox/week1_programming_challenges/1_sum_of_two_digits/: APlusB.cpp  CMakeLists.txt
course_1_algorithmic_toolbox/week1_programming_challenges/2_maximum_pairwise_product/: CMakeLists.txt  max_pairwise_product.cpp  max_pairwise_product.h  test_max_pairwise_product.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/: CMakeLists.txt
course_1_algorithmic_toolbox/week2_algorithmic_warmup/1_fibonacci_number/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  test_fibonacci.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: CMakeLists.txt  fibonacci_last_digit.cpp  fibonacci_last_digit.h  test_fibonacci_last_digit.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: CMakeLists.txt  gcd.cpp  gcd.h  test_gcd.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/4_least_common_multiple/: CMakeLists.txt  lcm.cpp  lcm.h  test_lcm.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/5_fibonacci_number_again/: CMakeLists.txt  fibonacci_huge.cpp  fibonacci_huge.h  test_fibonacci_huge.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/6_last_digit_of_the_sum_of_fibonacci_numbers/: CMakeLists.txt  fibonacci_sum_last_digit.cpp  fibonacci_sum_last_digit.h  test_fibonacci_sum_last_digit.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: CMakeLists.txt  fibonacci_partial_sum.cpp  fibonacci_partial_sum.h  test_fibonacci_partial_sum.cpp
course_1_algorithmic_toolbox/week2_algorithmic_warmup/8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: fibonacci_sum_squares.py
course_1_algorithmic_toolbox/week3_greedy_algorithms/: CMakeLists.txt
course_1_algorithmic_toolbox/week3_greedy_algorithms/1_money_change/: change.py
course_1_algorithmic_toolbox/week3_greedy_algorithms/2_maximum_value_of_the_loot/: CMakeLists.txt  fractional_knapsack.cpp  fractional_knapsack.h  test_fractional_knapsack.cpp
course_1_algorithmic_toolbox/week3_greedy_algorithms/3_maximum_advertisement_revenue/: dot_product.py
course_1_algorithmic_toolbox/week3_greedy_algorithms/4_collecting_signatures/: covering_segments.py
course_1_algorithmic_toolbox/week3_greedy_algorithms/5_maximum_number_of_prizes/: different_summands.py
course_1_algorithmic_toolbox/week3_greedy_algorithms/6_maximum_salary/: CMakeLists.txt  largest_number.cpp
course_1_algorithmic_toolbox/week4_divide_and_conquer/: CMakeLists.txt
course_1_algorithmic_toolbox/week4_divide_and_conquer/1_binary_search/: binary_search.cpp
course_1_algorithmic_toolbox/week4_divide_and_conquer/2_majority_element/: majority_element.cpp
course_1_algorithmic_toolbox/week4_divide_and_conquer/3_improving_quicksort/: CMakeLists.txt  sorting.cpp
course_1_algorithmic_toolbox/week4_divide_and_conquer/4_number_of_inversions/: inversions.py
course_1_algorithmic_toolbox/week4_divide_and_conquer/6_closest_points/: closest.py  closest2.py
course_1_algorithmic_toolbox/week5_dynamic_programming1/: CMakeLists.txt
course_2_data_structures/: CMakeLists.txt
course_2_data_structures/week1_basic_data_structures/: CMakeLists.txt
course_2_data_structures/week3_priority_queues_and_disjoint_sets/: CMakeLists.txt
course_2_data_structures/week4_hash_tables/: CMakeLists.txt
test/: CMakeLists.txt  catch.hpp  common.h
(+25 files in other folders)
